--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,7 @@ djangorestframework = "*"
 markdown = "*"
 telebot = "*"
 pytelegrambotapi = "*"
+boto3 = "*"
 
 [requires]
 python_version = "3.7"
