add peewee libraries and postgres

--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,8 @@ markdown = "*"
 telebot = "*"
 pytelegrambotapi = "*"
 boto3 = "*"
+peewee = "*"
+psycopg2-binary = "*"
 
 [requires]
 python_version = "3.7"
