--- a/scripts/.env
+++ b/scripts/.env
@@ -1,2 +1,4 @@
 TELEGRAM_TOKEN_API=1038539886:AAF7ZIs_k7w0Hf29dwNytAjD6bw4VebVNZI
 DOWNLOAD_PATH=download_files
+POLLY_ACCESS_KEY=
+POLLY_SECRET_KEY=
