add postgres database enviroment variables in .env file

--- a/scripts/.env
+++ b/scripts/.env
@@ -2,3 +2,6 @@ TELEGRAM_TOKEN_API=1038539886:AAF7ZIs_k7w0Hf29dwNytAjD6bw4VebVNZI
 DOWNLOAD_PATH=download_files
 POLLY_ACCESS_KEY=
 POLLY_SECRET_KEY=
+POSTGRES_DATABASE=bot
+POSTGRES_USER=root
+POSTGRES_PASSWORD=root
