--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,26 @@
-telegram
-beautifulsoup4==4.8.2
+asgiref==3.2.7
+beautifulsoup4==4.9.0
+boto3==1.12.36
+botocore==1.15.36
 bs4==0.0.1
-certifi==2019.11.28
+certifi==2020.4.5.1
 cffi==1.14.0
 chardet==3.0.4
-cryptography==2.8
-decorator==4.4.1
+cryptography==2.9
+decorator==4.4.2
+Django==3.0.5
+djangorestframework==3.11.0
+docutils==0.15.2
 environs==7.2.0
 future==0.18.2
 fuzzywuzzy==0.18.0
 idna==2.9
-marshmallow==3.5.0
-pycparser==2.19
+jmespath==0.9.5
+Markdown==3.2.1
+marshmallow==3.5.1
+peewee==3.13.2
+psycopg2-binary==2.8.5
+pycparser==2.20
 pydub==0.23.1
 pyobjc==6.1
 pyobjc-core==6.1
@@ -112,13 +121,19 @@ pyobjc-framework-VideoSubscriberAccount==6.1
 pyobjc-framework-VideoToolbox==6.1
 pyobjc-framework-Vision==6.1
 pyobjc-framework-WebKit==6.1
-python-dotenv==0.11.0
-python-telegram-bot==12.4.2
+pyTelegramBotAPI==3.6.7
+python-dateutil==2.8.1
+python-dotenv==0.12.0
+python-telegram-bot==12.5.1
 pyttsx3==2.81
-requests==2.23.0
+pytz==2019.3
+requests==2.7.0
+s3transfer==0.3.3
 six==1.14.0
-soupsieve==1.9.5
+soupsieve==2.0
 SpeechRecognition==3.8.1
-tornado==6.0.3
+sqlparse==0.3.1
+telebot==0.0.3
+tornado==6.0.4
 Unidecode==1.1.1
 urllib3==1.25.8
